// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/statistic/demo/basic.md correctly 1`] = `
<div
  class="ant-row"
  style="margin-left:-8px;margin-right:-8px"
>
  <div
    class="ant-col-12"
    style="padding-left:8px;padding-right:8px"
  >
    <div
      class="ant-statistic"
    >
      <div
        class="ant-statistic-title"
      >
        Active Users
      </div>
      <div
        class="ant-statistic-content"
      >
        <span
          class="ant-statistic-content-value"
        >
          <span
            class="ant-statistic-content-value-int"
          >
            112,893
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-col-12"
    style="padding-left:8px;padding-right:8px"
  >
    <div
      class="ant-statistic"
    >
      <div
        class="ant-statistic-title"
      >
        Account Balance (CNY)
      </div>
      <div
        class="ant-statistic-content"
      >
        <span
          class="ant-statistic-content-value"
        >
          <span
            class="ant-statistic-content-value-int"
          >
            112,893
          </span>
          <span
            class="ant-statistic-content-value-decimal"
          >
            .00
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/statistic/demo/countdown.md correctly 1`] = `
<div
  class="ant-row"
  style="margin-left:-8px;margin-right:-8px"
>
  <div
    class="ant-col-12"
    style="padding-left:8px;padding-right:8px"
  >
    <div
      class="ant-statistic"
    >
      <div
        class="ant-statistic-title"
      >
        Countdown
      </div>
      <div
        class="ant-statistic-content"
      >
        <span
          class="ant-statistic-content-value"
        >
          48:00:30
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-col-12"
    style="padding-left:8px;padding-right:8px"
  >
    <div
      class="ant-statistic"
    >
      <div
        class="ant-statistic-title"
      >
        Million Seconds
      </div>
      <div
        class="ant-statistic-content"
      >
        <span
          class="ant-statistic-content-value"
        >
          48:00:30:000
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-col-24"
    style="padding-left:8px;padding-right:8px;margin-top:32px"
  >
    <div
      class="ant-statistic"
    >
      <div
        class="ant-statistic-title"
      >
        Day Level
      </div>
      <div
        class="ant-statistic-content"
      >
        <span
          class="ant-statistic-content-value"
        >
          2 天 0 时 0 分 30 秒
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/statistic/demo/unit.md correctly 1`] = `
<div
  style="background:#ECECEC;padding:30px"
>
  <div
    class="ant-row"
    style="margin-left:-8px;margin-right:-8px"
  >
    <div
      class="ant-col-12"
      style="padding-left:8px;padding-right:8px"
    >
      <div
        class="ant-card ant-card-bordered"
      >
        <div
          class="ant-card-body"
        >
          <div
            class="ant-statistic"
          >
            <div
              class="ant-statistic-title"
            >
              Feedback
            </div>
            <div
              class="ant-statistic-content"
            >
              <span
                class="ant-statistic-content-prefix"
              >
                <i
                  class="anticon anticon-like"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="like"
                    fill="currentColor"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M885.9 533.7c16.8-22.2 26.1-49.4 26.1-77.7 0-44.9-25.1-87.4-65.5-111.1a67.67 67.67 0 0 0-34.3-9.3H572.4l6-122.9c1.4-29.7-9.1-57.9-29.5-79.4A106.62 106.62 0 0 0 471 99.9c-52 0-98 35-111.8 85.1l-85.9 311H144c-17.7 0-32 14.3-32 32v364c0 17.7 14.3 32 32 32h601.3c9.2 0 18.2-1.8 26.5-5.4 47.6-20.3 78.3-66.8 78.3-118.4 0-12.6-1.8-25-5.4-37 16.8-22.2 26.1-49.4 26.1-77.7 0-12.6-1.8-25-5.4-37 16.8-22.2 26.1-49.4 26.1-77.7-.2-12.6-2-25.1-5.6-37.1zM184 852V568h81v284h-81zm636.4-353l-21.9 19 13.9 25.4a56.2 56.2 0 0 1 6.9 27.3c0 16.5-7.2 32.2-19.6 43l-21.9 19 13.9 25.4a56.2 56.2 0 0 1 6.9 27.3c0 16.5-7.2 32.2-19.6 43l-21.9 19 13.9 25.4a56.2 56.2 0 0 1 6.9 27.3c0 22.4-13.2 42.6-33.6 51.8H329V564.8l99.5-360.5a44.1 44.1 0 0 1 42.2-32.3c7.6 0 15.1 2.2 21.1 6.7 9.9 7.4 15.2 18.6 14.6 30.5l-9.6 198.4h314.4C829 418.5 840 436.9 840 456c0 16.5-7.2 32.1-19.6 43z"
                    />
                  </svg>
                </i>
              </span>
              <span
                class="ant-statistic-content-value"
                style="color:#3f8600"
              >
                <span
                  class="ant-statistic-content-value-int"
                >
                  1,128
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-col-12"
      style="padding-left:8px;padding-right:8px"
    >
      <div
        class="ant-card ant-card-bordered"
      >
        <div
          class="ant-card-body"
        >
          <div
            class="ant-statistic"
          >
            <div
              class="ant-statistic-title"
            >
              Unmerged
            </div>
            <div
              class="ant-statistic-content"
            >
              <span
                class="ant-statistic-content-value"
              >
                <span
                  class="ant-statistic-content-value-int"
                >
                  93
                </span>
              </span>
              <span
                class="ant-statistic-content-suffix"
              >
                / 100
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
